2012-10-22  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Fix build without QtWidgets
        https://bugs.webkit.org/show_bug.cgi?id=99981

        Reviewed by Tor Arne Vestbø.

        Remove dependency to QtWidgets that is not needed here anymore since
        the removal of the QtQuick1 code.

        * declarative/experimental/experimental.pri:
        * declarative/public.pri:

2012-10-22  Jocelyn Turcotte  <jocelyn.turcotte@digia.com>

        [Qt] Fix "ASSERTION FAILED: !document->inPageCache()" when loading a page
        https://bugs.webkit.org/show_bug.cgi?id=98514

        Reviewed by Kenneth Rohde Christiansen.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage): Use FrameView::fixedVisibleContentRect
        instead of FrameView::visibleContentRect as the source to always keep the correct state.

2012-10-22  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Basic gesture event handling
        https://bugs.webkit.org/show_bug.cgi?id=66173

        Reviewed by Simon Hausmann.

        Implement basic handling of QGestureEvent converting and forwarding
        Tap and TapAndHold gestures to WebCore.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::gestureEvent):
        (QWebPage::event):
        * Api/qwebpage_p.h:
        (QWebPagePrivate):
        * WebCoreSupport/WebEventConversion.cpp:
        (WebKitPlatformGestureEvent):
        (WebCore::WebKitPlatformGestureEvent::WebKitPlatformGestureEvent):
        (WebCore::convertGesture):
        * WebCoreSupport/WebEventConversion.h:

2012-10-17  Tor Arne Vestbø  <tor.arne.vestbo@digia.com>

        [Qt] Modularize documentation for QtWebKit

        Running 'make docs' would fail unless 'make qmake_all' was ran first,
        but qmake_all involved generating all the derived sources, which seems
        overly complex just for building documentation.
